--- a/repse/application.yml
+++ b/repse/application.yml
@@ -1,5 +1,11 @@
 server:
-  port: 8000      
+  port: 8000
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/yly
+    username: root
+    password: root        
 eureka:
   instance:
     instance-id: ${spring.application.name}:${server.port}
